--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -71,27 +71,42 @@
                         android:background="@drawable/edit_text_bg"
                         android:layout_marginTop="3dp">
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+<!--                        <com.google.android.material.textfield.TextInputLayout-->
+<!--                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="28dp"-->
+<!--                            app:boxStrokeWidth="0dp"-->
+<!--                            app:boxStrokeWidthFocused="0dp"-->
+<!--                            app:endIconTint="@color/hint_color"-->
+<!--                            app:hintAnimationEnabled="false"-->
+<!--                            app:hintEnabled="false"-->
+<!--                            android:id="@+id/salutationTextInput">-->
+
+<!--                            <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
+<!--                                android:id="@+id/spinnerTitle"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="28dp"-->
+<!--                                android:hint="Title"-->
+<!--                                android:inputType="none"-->
+<!--                                android:padding="0dp"-->
+<!--                                android:textSize="12sp" />-->
+
+<!--                        </com.google.android.material.textfield.TextInputLayout>-->
+
+                        <androidx.appcompat.widget.AppCompatSpinner
+                            android:id="@+id/chooseTitleAddAddress"
                             android:layout_width="wrap_content"
-                            android:layout_height="28dp"
-                            app:boxStrokeWidth="0dp"
-                            app:boxStrokeWidthFocused="0dp"
-                            app:endIconTint="@color/hint_color"
-                            app:hintAnimationEnabled="false"
-                            app:hintEnabled="false"
-                            android:id="@+id/salutationTextInput">
+                            android:layout_height="30dp"
+                            android:background="@null"
+                            android:paddingLeft="0dp"
+                            android:overlapAnchor="false"/>
 
-                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                                android:id="@+id/spinnerTitle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="28dp"
-                                android:hint="Title"
-                                android:inputType="none"
-                                android:padding="0dp"
-                                android:textSize="12sp" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
+                        <ImageView
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:src="@drawable/triangle"
+                            android:layout_marginRight="8dp"
+                            android:layout_gravity="center_vertical"/>
 
                         <View
                             android:layout_width="1dp"
@@ -117,6 +132,17 @@
                     </LinearLayout>
 
 
+                    <TextView
+                        android:layout_marginTop="2dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* This is a required field"
+                        android:textSize="10sp"
+                        android:layout_marginLeft="2dp"
+                        android:textColor="@color/design_default_color_error"
+                        android:id="@+id/titleError"
+                       android:visibility="gone"
+                        />
 
                     <TextView
                         android:id="@+id/nameError"
