--- a/app/src/main/res/layout/create_ship_single_layout.xml
+++ b/app/src/main/res/layout/create_ship_single_layout.xml
@@ -3,21 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="18dp">
+    android:padding="25dp">
 
+
+    <CheckBox
+        android:id="@+id/check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
         android:layout_marginLeft="12dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
             <TextView
                 android:id="@+id/webSiteName"
                 android:layout_width="wrap_content"
@@ -26,7 +32,6 @@
                 android:textColor="@color/black"
                 android:textFontWeight="500"
                 android:textSize="12sp" />
-
             <TextView
                 android:id="@+id/quantity"
                 android:layout_width="wrap_content"
@@ -39,14 +44,22 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/shipmentId"
+            android:id="@+id/packageId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shipment ID #8473"
+            android:text="Package ID #8473"
             android:textColor="@color/black"
             android:textFontWeight="500"
             android:textSize="10sp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="Contains Damaged Items"
+            android:textColor="#FF0101"
+            android:textFontWeight="500"
+            android:textSize="10sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -80,6 +93,7 @@
 
 
         <TextView
+
             android:id="@+id/action"
             android:layout_width="85dp"
             android:layout_height="wrap_content"
@@ -95,8 +109,8 @@
 
 
         <LinearLayout
-            android:id="@+id/viewShipment"
-            android:layout_width="wrap_content"
+            android:id="@+id/viewPackage"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal">
@@ -104,7 +118,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View Shipment"
+                android:text="View Package"
                 android:textColor="#3A5FD8"
                 android:textFontWeight="500"
                 android:textSize="10sp" />
