--- a/app/src/main/res/layout/create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/create_shipment_delivery_address.xml
@@ -18,8 +18,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="39dp"
-                android:layout_marginLeft="20dp">
+                android:layout_marginLeft="23dp">
 
                 <RadioButton
                     android:layout_width="26dp"
@@ -41,6 +40,7 @@
                         android:textFontWeight="400"/>
 
                     <TextView
+                        android:id="@+id/createShipmentAddressName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nikkitha Shanker"
@@ -59,6 +59,7 @@
 
 
                     <TextView
+                        android:id="@+id/createShipmentPhoneNo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="+9714702 4444"
@@ -87,7 +88,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="47dp"
+                android:layout_marginRight="23dp"
+                android:layout_marginTop="8dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -99,6 +101,7 @@
                     android:textSize="10sp" />
 
                 <TextView
+                    android:id="@+id/createShipmentAddrsLine1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="182, 1st Floor, 2nd Cross Rd,\n7th Main, Koramangala\nBengaluru, Karnataka,\nIndia. 560034."
