--- a/app/src/main/res/layout/fragment_create_ship_request_summary.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request_summary.xml
@@ -116,6 +116,7 @@
                         android:layout_marginTop="24dp">
 
                         <CheckBox
+                            android:id="@+id/check"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical" />
@@ -138,6 +139,262 @@
                         android:layout_marginVertical="14dp"
                         android:background="@color/hint_color" />
 
+                    <LinearLayout
+                        android:visibility="gone"
+                        android:id="@+id/addressForm"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="18dp"
+                            android:text="Add Billing Address"
+                            android:textColor="@color/black"
+                            android:textFontWeight="700"
+                            android:textSize="14sp" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="34dp"
+                            android:layout_marginTop="27dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Full Name"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Address Line 1"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Address Line 2"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="City"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="State / Province"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Country"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <LinearLayout
+                                android:id="@+id/shipItToSellerCountry"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/edit_text_bg"
+                                android:orientation="horizontal">
+
+
+                                <TextView
+                                    android:id="@+id/shipToSellerCountryTextView"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="28dp"
+                                    android:layout_weight="1"
+                                    android:gravity="center|left"
+                                    android:text=""
+                                    android:paddingLeft="15dp"
+                                    android:singleLine="true"
+                                    android:textColor="@color/black"
+                                    android:textSize="12sp" />
+
+                                <View
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/hint_color" />
+
+
+                                <ImageView
+                                    android:layout_width="12dp"
+                                    android:layout_height="12dp"
+                                    android:layout_gravity="center"
+                                    android:layout_marginHorizontal="8dp"
+                                    android:src="@drawable/triangle" />
+
+
+                            </LinearLayout>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Pincode"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="Phone Number"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="10sp" />
+
+                            <EditText
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="3dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingVertical="5dp"
+                                android:paddingLeft="13dp"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/hint_color"
+                                android:textSize="12sp"
+                                app:boxStrokeColor="@color/hint_color" />
+
+
+
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/return_landing_proceed_btn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="32dp"
+                                android:paddingHorizontal="71dp"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="34dp"
+                                android:layout_marginBottom="46dp"
+                                android:backgroundTint="#17B28F"
+                                android:insetTop="0dp"
+                                android:insetBottom="0dp"
+                                android:letterSpacing="0.03"
+                                android:lineHeight="14sp"
+                                android:text="Add Address"
+                                android:textAllCaps="false"
+                                android:textColor="@color/white"
+                                android:textFontWeight="700"
+                                android:textSize="12sp"
+                                app:cornerRadius="5dp" />
+
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/billingAddressLayout">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -187,6 +444,8 @@
                         android:text="@string/edit"
                         android:textColor="#3A5FD8"
                         android:textFontWeight="600" />
+                </LinearLayout>
+
 
                     <View
                         android:layout_width="match_parent"
@@ -560,7 +819,7 @@
                         <com.google.android.material.button.MaterialButton
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
-
+                            android:id="@+id/createShipBtn"
                             android:layout_marginLeft="20dp"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
