--- a/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
+++ b/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
@@ -646,6 +646,7 @@
                             android:layout_height="32dp"
                             android:insetBottom="0dp"
                             android:insetTop="0dp"
+                            android:textSize="12sp"
                             android:backgroundTint="@color/white"
                             android:text="Back"
                             android:textAllCaps="false"
@@ -664,6 +665,7 @@
                             android:layout_marginLeft="20dp"
                             android:insetTop="0dp"
                             android:text="Proceed"
+                            android:textSize="12sp"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
                             android:textFontWeight="700"
