--- a/app/src/main/res/layout/alert_dialog_box.xml
+++ b/app/src/main/res/layout/alert_dialog_box.xml
@@ -10,38 +10,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
+        android:layout_marginTop="12dp"
+        android:gravity="center_horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="30dp"
+            android:gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/alertIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_alert"/>
+            android:src="@drawable/ic_alert" />
 
         <TextView
+            android:id="@+id/alertText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:text="ALERT"
             android:textFontWeight="600"
-            android:layout_toRightOf="@id/alertIcon"
-            android:textSize="12sp"
-            android:layout_marginLeft="5dp"/>
+            android:textSize="12sp" />
+
+
+
+        </LinearLayout>
+
 
         <ImageView
             android:id="@+id/alert_close_btn"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="21dp"
+            android:layout_weight="0.1"
             android:src="@drawable/cross" />
 
-    </RelativeLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,6 +69,25 @@
             android:text="Please note"
             android:textSize="10sp"
             android:textFontWeight="400"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:text="- You’ve 1 package pending in ‘In Review’"
+            android:textSize="10sp"
+            android:textFontWeight="400"
+            android:visibility="gone"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="- You’ve 2 packages pending in ‘Action Required’"
+            android:textSize="10sp"
+            android:textFontWeight="400"
+            android:visibility="gone"
             android:textColor="@color/black"/>
 
         <TextView
@@ -85,12 +117,12 @@
             android:textColor="#8F8F8F"/>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/proceedToShipRequestBtn"
             android:layout_width="wrap_content"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
+            app:cornerRadius="5dp"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="#17B28F"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="17dp"
             android:text="Proceed to Ship Request"
