--- a/app/src/main/res/layout/fragment_create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/fragment_create_shipment_delivery_address.xml
@@ -8,6 +8,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/createShipmentDeliveryAddressCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="21dp"
+        android:layout_marginTop="27dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginBottom="21dp"
+        app:cardElevation="4dp">
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -22,12 +47,139 @@
             android:layout_marginLeft="23dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/createShipmentDeliveryAddress"
+            android:id="@+id/createShipmentDeliveryAddressRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_marginTop="39dp"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
+        <LinearLayout
+            android:id="@+id/addMoreDeliveryAddressText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:layout_marginTop="21dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add more address"
+                android:textColor="#3A5FD8"
+                android:textSize="12sp"
+                android:textFontWeight="500"/>
+
+            <ImageView
+                android:layout_width="13dp"
+                android:layout_height="13dp"
+                android:src="@drawable/ic_add"
+                android:layout_marginLeft="6dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:layout_marginBottom="31dp"
+            android:layout_gravity="center_horizontal">
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:insetBottom="0dp"
+                android:insetTop="0dp"
+                android:textSize="12sp"
+                android:backgroundTint="@color/white"
+                android:text="Back"
+                android:textAllCaps="false"
+                android:textColor="#2D8DFF"
+                android:textFontWeight="700"
+                android:letterSpacing="0.03"
+                android:paddingHorizontal="40dp"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                app:strokeColor="#2D8DFF"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:paddingHorizontal="20dp"
+                android:insetBottom="0dp"
+                android:layout_marginLeft="20dp"
+                android:insetTop="0dp"
+                android:text="Proceed"
+                android:textSize="12dp"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textFontWeight="700"
+                app:icon="@drawable/return_arrow"
+                app:backgroundTint="#2D8DFF"
+                app:iconGravity="end"
+                app:iconTint="@color/white"
+                android:letterSpacing="0.03"/>
+        </LinearLayout>
 
     </LinearLayout>
 
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/emptyAddressCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="21dp"
+            android:layout_marginTop="27dp"
+            android:layout_marginBottom="21dp"
+            app:cardCornerRadius="10dp"
+            android:visibility="gone"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Choose Your Delivery Address"
+                android:textColor="@color/black"
+                android:textFontWeight="700"
+                android:textSize="14sp"
+                android:layout_marginTop="28dp"
+                android:layout_marginLeft="23dp"/>
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_empty_book"
+                android:layout_marginTop="130dp"
+                android:layout_marginBottom="120dp"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/createShipmentAddAddrsBtn"
+                    android:layout_width="138dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="31dp"
+                    android:backgroundTint="@color/white"
+                    android:text="Add Address"
+                    android:textAllCaps="false"
+                    android:textColor="#2D8DFF"
+                    android:textFontWeight="600"
+                    android:textSize="12sp"
+                    app:cornerRadius="5dp"
+                    app:strokeColor="#2D8DFF"
+                    app:strokeWidth="1dp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 </FrameLayout>
