--- a/app/src/main/res/layout/landing_dialog.xml
+++ b/app/src/main/res/layout/landing_dialog.xml
@@ -45,10 +45,8 @@
                 android:id="@+id/continueOrder"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
-                android:layout_height="27dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
                 android:text="Continue Order"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -59,11 +57,10 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/createNewOrder"
                 android:layout_width="wrap_content"
-                android:layout_height="27dp"
+                android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/continueOrder"
                 android:backgroundTint="#17B28F"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
+
                 android:text="Create New Order"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
