--- a/app/src/main/res/layout/return_item_dialog_box.xml
+++ b/app/src/main/res/layout/return_item_dialog_box.xml
@@ -59,10 +59,8 @@
                 android:id="@+id/addMoreProductBtn"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
-                android:layout_height="27dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
                 android:text="Add more items"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -73,11 +71,9 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/proceedWith1ItemBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="27dp"
+                android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/addMoreProductBtn"
                 android:backgroundTint="#17B28F"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
                 android:text="Proceed with 1 item"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
