--- a/app/src/main/res/layout/view_photo_dialog.xml
+++ b/app/src/main/res/layout/view_photo_dialog.xml
@@ -91,7 +91,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp">
 
             <ImageView
                 android:layout_width="64dp"
